tests/invalid/generic_parameter_pack_non_trailing.wio
fn Bad<T..., U>(head: U) -> i32 {
    return 0;
}
